--- a/new/package.json
+++ b/new/package.json
@@ -15,7 +15,11 @@
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "jest": "^27.5.1",
+    "rollup": "^2.68.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
