--- a/new/package.json
+++ b/new/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@types/jest": "^27.4.0",
-    "babel-jest": "^27.5.1"
+    "babel-jest": "^27.5.1",
+    "vue": "^3.2.29"
   }
 }
