开发环境搭建完毕

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "lib/mini-vue.esm.js",
   "scripts": {
     "build": "rollup -c",
+    "dev": "rollup -c --watch",
     "build:type": "tsc -p ./tsconfig.type.json",
     "test": "jest --no-cache"
   },
